# genro-routes

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: ARCHITECTURE.md  CODE_READING_GUIDE.md  FAQ.md  conf.py  genro-routes-for-dummies.html  index.md  installation.md  quickstart.md
docs/api/: plugins.md  reference.md
docs/concepts_to_add/: auth.md  context.md  issue-context-class.md  issue-rename-routing.md  lazy-branches.md  live-documentation.md  philosophy.md
docs/guide/: attach-instance-visual-guide.md  basic-usage.md  best-practices.md  branches.md  context.md  examples.md  hierarchies.md  plugin-configuration.md  plugins.md  why-one-name-per-operation.md
examples/: README.md  WHY_GENRO_ROUTES.md  auth_roles.py  deep_repo_explorer.py  faker_magic.py  faker_standard.py  pygments_highlighting.py  qrcode_generator.py  repo_explorer.py  self_documentation.py  service_composition.py
examples/mcp_bridge/: README.md  agent_sim.py  bridge.py  demo.py
src/genro_routes/: __init__.py  exceptions.py
src/genro_routes/cli/: __init__.py  _builder.py  _formatters.py  _type_map.py
src/genro_routes/core/: __init__.py  base_router.py  context.py  db_routing.py  decorators.py  routed.py  router.py  router_interface.py  router_node.py  routing.py
src/genro_routes/plugins/: __init__.py  _base_plugin.py  _rule_based.py  allow.py  auth.py  channel.py  env.py  filter.py  logging.py  openapi.py  pydantic.py
tests/: __init__.py  conftest.py  test_allow_plugin.py  test_async_nodes.py  test_auth_plugin.py  test_branch_alias.py  test_capabilities_set.py  test_channel_plugin.py  test_cli.py  test_coverage_gaps.py  test_db_routing_class.py  test_env_plugin.py  test_filter_plugin.py  test_lazy_branches.py  test_node_resolution.py  test_params_description.py  test_plugin_shorthand.py  test_plugins_new.py  test_pydantic_plugin.py  test_result_description.py  test_router_basic.py  test_router_edge_cases.py  test_router_filters_and_validation.py  test_router_runtime_extras.py  test_routing_context.py
